# Process this file with autoconf to produce a configure script.
#
# $Id: configure.in,v 1.2 2004/01/17 18:16:35 ppisa Exp $

# autoconf requirement
AC_PREREQ([2.57])

AC_INIT([orte],[0.2.0],[petr.smolik@wo.cz])
AC_CONFIG_AUX_DIR(admin)

#Check for CPU / vendor / OS
AC_CANONICAL_HOST
AC_CANONICAL_TARGET
AM_CONFIG_HEADER(orte/include/config.h)
AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
# Activate maintainer mode
AM_MAINTAINER_MODE

DS_LINUX()

###############################
# Package info
ORTE_MAJOR_VERSION=0
ORTE_MINOR_VERSION=2
ORTE_MICRO_VERSION=0
ORTE_VERSION=$ORTE_MAJOR_VERSION.$ORTE_MINOR_VERSION.$ORTE_MICRO_VERSION
AC_SUBST(ORTE_MAJOR_VERSION)
AC_SUBST(ORTE_MINOR_VERSION)
AC_SUBST(ORTE_MICRO_VERSION)
AC_SUBST(ORTE_VERSION)


###############################
# modules
moduledir="\$(libdir)/modules/\$(LINUX_KERNELRELEASE)/orte"
modulePROGRAMS_INSTALL="\$(top_builddir)/modtool --install"
modulePROGRAMS_UNINSTALL="\$(top_builddir)/modtool --uninstall"
AC_SUBST(moduledir)
AC_SUBST(modulePROGRAMS_INSTALL)

###############################
# Checks for programs.
AC_PROG_CC
AC_PROG_RANLIB

###############################
# Checks for libraries (no for RT)
if test -z ${CONFIG_ORTE_RT} ; then
AC_CHECK_LIB([ws2_32], [main])
AC_CHECK_LIB([pthread], [main])
fi

###############################
# Checks for header files.
if test -z ${CONFIG_ORTE_RT} ; then
AC_HEADER_STDC
AC_CHECK_HEADERS(
[arpa/inet.h fcntl.h stdio.h netdb.h netinet/in.h stdlib.h \
string.h sys/ioctl.h sys/socket.h sys/time.h unistd.h pthread.h \
stdarg.h getopt.h sys/types.h net/if.h byteswap.h signal.h errno.h \
ctype.h sys/stat.h winsock2.h ws2tcpip.h])
fi
###############################
# includes
case "$target" in
  *-cygwin* | *-mingw*)
    INCLUDES='-I$(top_srcdir)/orte/include -I$(top_srcdir)/orte/include/win32'
    WIN='yes'
    AC_DEFINE([CONFIG_ORTE_WIN],[1],[Define if is target windows])
    ;;
  *)
    # Assume Unix.
    if test ${USE_RTLINUX} == "yes" ; then
      INCLUDES='-I$(top_srcdir)/orte/include -I$(top_srcdir)/orte/include/rtl -I$(top_srcdir)/orte/contrib/RTL_UDP/include'
    elif test ${USE_RTAI} == "yes" ; then
      INCLUDES='-I$(top_srcdir)/orte/include -I$(top_srcdir)/orte/include/rtai'
    else
      INCLUDES='-I$(top_srcdir)/orte/include'
      UNIX='yes'
      AC_DEFINE([CONFIG_ORTE_UNIX],[1],[Define if is target a unix system])
    fi
    ;;
esac
AC_SUBST(INCLUDES)
AM_CONDITIONAL(CONFIG_ORTE_WIN, test x$WIN = xyes)
AM_CONDITIONAL(CONFIG_ORTE_UNIX, test x$UNIX = xyes)

###############################
# Checks for typedefs, structures, and compiler characteristics.
AC_C_BIGENDIAN
AC_C_CONST
AC_C_INLINE
AC_TYPE_PID_T
AC_TYPE_SIZE_T

###############################
# Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_CHECK_FUNCS([strdup])

###############################
# Add obsolute directory for header files
CFLAGS="$CFLAGS -Wall"

AC_CONFIG_FILES([Makefile
                 orte/Makefile
		 orte/liborte/Makefile
		 orte/liborte/rtl/Makefile
		 orte/examples/Makefile
		 orte/examples/hello/Makefile
		 orte/examples/reliable/Makefile
		 orte/examples/ORTEPing/Makefile
		 orte/examples/ORTESpy/Makefile
                 orte/manager/Makefile])



AC_OUTPUT([
modtool
])
chmod +x modtool


# ======================================================================
#		generate orte/include/orte_config.h
# ======================================================================

AC_MSG_NOTICE([creating orte/include/orte_config.h])
sed -e "s/ PACKAGE/ ORTE_PACKAGE/" -e "s/ VERSION/ ORTE_VERSION/" \
    orte/include/config.h >orte/include/orte_config.h.new
if cmp -s orte/include/orte_config.h.new orte/include/orte_config.h; then
	rm orte/include/orte_config.h.new
	AC_MSG_NOTICE([orte/include/orte_config.h is unchanged])
else
	mv orte/include/orte_config.h.new orte/include/orte_config.h
fi

echo \
"------------------------------------------------------------------------
Configuration ORTE:

  Source code location:       ${srcdir}
  Compiler:                   ${CC}
  Compiler flags:             ${CFLAGS}
  Host System Type:           ${host}
  
  See config.h for further configuration information.
------------------------------------------------------------------------"
	    