noinst_PROGRAMS = publisher subscriberreliable subscriberbesteffort

publisher_SOURCES = publisher.c
publisher_LDADD   = $(top_builddir)/orte/liborte/liborte.la 
publisher_LDFLAGS = -static

subscriberreliable_SOURCES = subscriberreliable.c
subscriberreliable_LDADD   = $(top_builddir)/orte/liborte/liborte.la 
subscriberreliable_LDFLAGS = -static

subscriberbesteffort_SOURCES = subscriberbesteffort.c
subscriberbesteffort_LDADD   = $(top_builddir)/orte/liborte/liborte.la 
subscriberbesteffort_LDFLAGS = -static
